# gree-web-control

./: Cargo.toml
src/: gree.rs  main.rs
templates/: hello.html
