[package]
name = "gree-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.6"
base64 = "0.22.1"
openssl = "0.10.64"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
